--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
           </div>
         </div>
       </section>
-      <section class="section sec7" id="design">
+      <section class="section sec7" id="graphic">
         <div class="sns-inner">
           <div class="title"><h2>Graphic design</h2></div>
           <div class="sns-wrap">
@@ -673,7 +673,7 @@
           </div>
         </div>
       </section>
-      <section class="section sec8" id="design">
+      <section class="section sec8" id="detailed_page">
         <h2>DETAILED PAGE</h2>
         <div id="page_lst">
           <ul class="page_li">
@@ -709,7 +709,7 @@
           </ul>
         </div>
       </section>
-      <section class="section sec9" id="design">
+      <section class="section sec9" id="banner">
         <h2>BANNER</h2>
         <div id="slider">
           <div class="slides"><img src="./src/image/banner/bnr-5.png" /></div>
