--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <li><a href="#intro">Intro</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#site">Site</a></li>
-            <li><a href="#design">Design</a></li>
+            <li><a href="#product">Design</a></li>
             <li><a href="#motion">Motion</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
@@ -519,7 +519,7 @@
           </div>
         </div>
       </section>
-      <section class="section sec6" id="design">
+      <section class="section sec6" id="product">
         <!-- title -->
         <div class="title">
           <h2>
