--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       </section>
 
       <!-- about -->
-      <section class="section sec2 fp-noscroll" id="about">
+      <section class="section sec2" id="about">
         <div class="inner">
           <div class="about-info">
             <div class="about-text">
