--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                         <li>디자인팀 대리(디자인 총괄)</li>
                         <li>제품 디자인 및 브랜드 디자인</li>
                         <li>
-                          그래픽/웹디자인: 배너 및 상세페이지, 인쇄물 디자인
+                          그래픽/웹디자인: 웹, 인쇄물 디자인
                         </li>
                         <li>
                           신규 쇼핑몰 입점 및 채널 관리(상품등록 및 진열, 기획전
@@ -229,7 +229,7 @@
                           ><br />
                           상품 등록 및 진열 관리, 프로모션/ 기획전 딜 진행
                         </li>
-                        <li>웹 상세페이지/ 배너 디자인 및 인쇄물 디자인</li>
+                        <li>웹 및 인쇄물 디자인</li>
                       </ul>
                     </li>
                   </ul>
@@ -239,9 +239,8 @@
                       <ul>
                         <li>웹디자인팀 사원</li>
                         <li>
-                          배너/상세페이지/카탈로그/명함/쿠폰 등 인쇄물 시안 작업
+                          웹, 인쇄물 시안 작업
                         </li>
-                        <li>온라인 배너/팝업</li>
                       </ul>
                     </li>
                   </ul>
