--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     이수
                   </li>
                   <li>
-                    <b>2024. 02.</b> 한양사이버대학교 시각디자인학과 졸업 예정
+                    <b>2024. 02.</b> 한양사이버대학교 시각디자인학과 졸업
                   </li>
                   <li><b>2022. 03.</b> 한양사이버대학교 시각디자인학과 편입</li>
                   <li><b>2017. 08.</b> ITQ Master(파워포인트/한글/엑셀)</li>
@@ -194,9 +194,8 @@
                       <b>발스코리아(주)</b><em> (2021.02 ~ 2023.04) </em>
                       <ul>
                         <li>디자인팀 대리(디자인 총괄)</li>
-                        <li>제품 디자인 및 브랜드 디자인</li>
                         <li>
-                          그래픽/웹디자인: 배너 및 상세페이지, 인쇄물 디자인
+                          그래픽/웹/인쇄물 디자인
                         </li>
                         <li>홈페이지 관리</li>
                       </ul>
@@ -209,7 +208,7 @@
                         <li>디자인팀 대리(디자인 총괄)</li>
                         <li>제품 디자인 및 브랜드 디자인</li>
                         <li>
-                          그래픽/웹디자인: 웹, 인쇄물 디자인
+                          그래픽/웹디자인
                         </li>
                         <li>
                           신규 쇼핑몰 입점 및 채널 관리(상품등록 및 진열, 기획전
